--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script language="javascript" src="movable.js"></script>
-    <script language="javascript" src="app.js" defer="true"></script>
-    <link rel="stylesheet" href="style.css">
+    <script language="javascript" src="./js/movable.js"></script>
+    <script language="javascript" src="./js/app.js" defer="true"></script>
+    <link rel="stylesheet" href="./css/style.css">
     <title>Movable Squares</title>
 </head>
 <body>
