--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/css/images/favicon.ico"/>
+    <link rel="icon" href="./css/images/favicon.ico">
     <script language="javascript" src="./js/movable.js"></script>
     <script language="javascript" src="./js/app.js" defer="true"></script>
     <link rel="stylesheet" href="./css/style.css">
